## configure.in
## Made by nicuveo for saw

ANALYSE_OPTS = -o "-I ../include -I ../src"
COVERAGE_OPTS = -t saw -o "--no-branch-coverage"
COVERAGE_OUT = ../doc/coverage

TESTS =                                    \
  statement                                \
  database                                 \
  errors                                   \
  cache                                    \
  value                                    \
  flag                                     \
  blob                                     \
  row                                      \
  basic                                    \

CFIL =                                     \
        ../include/saw/database.hh         \
        ../include/saw/database.hxx        \
        ../include/saw/detail/cache.hh     \
        ../include/saw/detail/cache.hxx    \
        ../include/saw/detail/flag.hh      \
        ../include/saw/detail/owner.hh     \
        ../include/saw/detail/proxy.hh     \
        ../include/saw/detail/proxy.hxx    \
        ../include/saw/parameter.hh        \
        ../include/saw/parameter.hxx       \
        ../include/saw/row.hh              \
        ../include/saw/row.hxx             \
        ../include/saw/row_iterator.hh     \
        ../include/saw/saw.hh              \
        ../include/saw/statement.hh        \
        ../include/saw/statement.hxx       \
        ../include/saw/types.hh            \
        ../include/saw/value.hh            \
        ../include/saw/value.hxx           \
        ../src/database.cc                 \
        ../src/misc/foreach.hh             \
        ../src/row.cc                      \
        ../src/row_iterator.cc             \
        ../src/shared/shared_database.cc   \
        ../src/shared/shared_database.hh   \
        ../src/shared/shared_database.hxx  \
        ../src/shared/shared_statement.cc  \
        ../src/shared/shared_statement.hh  \
        ../src/shared/shared_statement.hxx \
        ../src/statement.cc                \
        ../src/value.cc                    \

