## configure.in
## Made by nicuveo for saw

ANALYSE_OPTS = -o "-I ../include -I ../src"
COVERAGE_OPTS = -t saw -o "--no-branch-coverage"
COVERAGE_OUT = ../doc/coverage

TESTS =                                        \
  statement                                    \
  database                                     \
  errors                                       \
  cache                                        \
  value                                        \
  flag                                         \
  blob                                         \
  row                                          \
  basic                                        \

CFIL =                                         \
        ../include/nauths/saw/database.hh      \
        ../include/nauths/saw/database.hxx     \
        ../include/nauths/saw/detail/cache.hh  \
        ../include/nauths/saw/detail/cache.hxx \
        ../include/nauths/saw/detail/flag.hh   \
        ../include/nauths/saw/detail/owner.hh  \
        ../include/nauths/saw/detail/proxy.hh  \
        ../include/nauths/saw/detail/proxy.hxx \
        ../include/nauths/saw/parameter.hh     \
        ../include/nauths/saw/parameter.hxx    \
        ../include/nauths/saw/row.hh           \
        ../include/nauths/saw/row.hxx          \
        ../include/nauths/saw/row_iterator.hh  \
        ../include/nauths/saw/saw.hh           \
        ../include/nauths/saw/statement.hh     \
        ../include/nauths/saw/statement.hxx    \
        ../include/nauths/saw/types.hh         \
        ../include/nauths/saw/value.hh         \
        ../include/nauths/saw/value.hxx        \
        ../src/database.cc                     \
        ../src/misc/foreach.hh                 \
        ../src/row.cc                          \
        ../src/row_iterator.cc                 \
        ../src/shared/shared_database.cc       \
        ../src/shared/shared_database.hh       \
        ../src/shared/shared_database.hxx      \
        ../src/shared/shared_statement.cc      \
        ../src/shared/shared_statement.hh      \
        ../src/shared/shared_statement.hxx     \
        ../src/statement.cc                    \
        ../src/value.cc                        \

