CFLAGS = -I../../include -I../../src -W -Wall -Wextra -Werror -ansi -pedantic -g3 -ggdb3 --coverage
LDFLAGS += --coverage -lsqlite3

CFIL =                                   \
    ../../src/shared/shared_database.cc  \
    ../../src/shared/shared_statement.cc \
    ../../src/row_iterator.cc            \
    ../../src/statement.cc               \
    ../../src/database.cc                \
    ../../src/error.cc                   \
    ../../src/value.cc                   \
    ../../src/blob.cc                    \
    ../../src/row.cc                     \
    test.cc                              \
